--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="home-detail">
                 <p>Hello i'm</p>
                 <h1>Marla Rithwik Reddy</h1>
-                <h2>Frontend Developer</h2>
+                <h2>AIML Student | Frontend Developer</h2>
                 <div class="download-social">
                     <a href="cv.pdf" class="btn" download="My_CV.pdf">Download CV</a>
                     <div class="social-icons">
@@ -332,7 +332,7 @@
             </script>
         </section>
 
-        
+
         <!-- projects section -->
         <section id="projects">
             <div class="project-heading">
@@ -347,7 +347,7 @@
                 <div class="project-card">
                     <h3>Gesture Speak</h3>
                     <p>An AI-powered hand gesture recognition system that detects and interprets user gestures to control media functions like play, pause, and more. Utilizes computer vision to enable seamless, touch-free interaction.</p>
-                    <button onclick="window.open('https://github.com/RithwikReddyMarla/sophisticated-user-interface.git')"><i class="ri-github-line"></i>View Code</button>
+                    <button onclick="window.open('https://github.com/alankrutharao/GestureControl.git')"><i class="ri-github-line"></i>View Code</button>
                 </div>
             </div>
         </section>
