--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             <h2 class="contact-heading">Contact Me</h2>
             <div class="contact-details">
                 <p><strong>Email:</strong> rithwikreddymarla6@gmail.com</p>
-                <p><strong>Phone:</strong> +965 203 3954</p>
+                <p><strong>Phone:</strong> 965 203 3954</p>
                 <p><strong>GitHub:</strong> <a href="https://github.com/rithwikReddyMarla" target="_blank">github.com/rithwikReddyMarla</a></p>
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rithwik-reddy-marla/" target="_blank">linkedin.com/in/rithwik-reddy-marla/</a></p>
             </div>
