--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h1>Marla Rithwik Reddy</h1>
                 <h2>AIML Student | Frontend Developer</h2>
                 <div class="download-social">
-                    <a href="cv.pdf" class="btn" download="My_CV.pdf">Download CV</a>
+                    <a href="My_CV.pdf" class="btn" download="My_CV.pdf">Download CV</a>
                     <div class="social-icons">
                         <a href="https://github.com/RithwikReddyMarla" target="_blank"><i class="ri-github-fill"></i></a>
                         <a href="https://www.linkedin.com/in/rithwik-reddy-marla/" target="_blank"><i class="ri-linkedin-fill"></i></a>
