--- a/index.html
+++ b/index.html
@@ -56,27 +56,25 @@
             <div class="home-detail">
                 <div class="home-detail">
                     <p class="line1">
-    <span style="--i:0">H</span><span style="--i:1">e</span><span style="--i:2">l</span><span style="--i:3">l</span><span style="--i:4">o</span>
-    <span style="--i:5"> </span><span style="--i:6">I</span><span style="--i:7">'</span><span style="--i:8">m</span>
-  </p>
-
-  <h1 class="line2">
-    <span style="--i:0">R</span><span style="--i:1">i</span><span style="--i:2">t</span><span style="--i:3">h</span><span style="--i:4">w</span><span style="--i:5">i</span><span style="--i:6">k</span>
-    <span style="--i:7"> </span><span style="--i:8">R</span><span style="--i:9">e</span><span style="--i:10">d</span><span style="--i:11">d</span><span style="--i:12">y</span>
-    <span style="--i:13"> </span><span style="--i:14">M</span><span style="--i:15">a</span><span style="--i:16">r</span><span style="--i:17">l</span><span style="--i:18">a</span>
-  </h1>
-
-  <h2 class="line3">
-    <span style="--i:0">A</span><span style="--i:1">I</span><span style="--i:2">M</span><span style="--i:3">L</span>
-    <span style="--i:4"> </span><span style="--i:5">s</span><span style="--i:6">t</span><span style="--i:7">u</span><span style="--i:8">d</span><span style="--i:9">e</span><span style="--i:10">n</span><span style="--i:11">t</span>
-    <span style="--i:12"> </span><span style="--i:13">|</span><span style="--i:14"> </span>
-    <span style="--i:15">f</span><span style="--i:16">r</span><span style="--i:17">o</span><span style="--i:18">n</span><span style="--i:19">t</span><span style="--i:20">e</span><span style="--i:21">n</span><span style="--i:22">d</span>
-    <span style="--i:23"> </span><span style="--i:24">d</span><span style="--i:25">e</span><span style="--i:26">v</span><span style="--i:27">e</span><span style="--i:28">l</span><span style="--i:29">o</span><span style="--i:30">p</span><span style="--i:31">e</span><span style="--i:32">r</span>
-  </h2>
+                        <span style="--i:0">H</span><span style="--i:1">e</span><span style="--i:2">l</span><span style="--i:3">l</span><span style="--i:4">o</span>
+                        <span style="--i:5"> </span><span style="--i:6">I</span><span style="--i:7">'</span><span style="--i:8">m</span>
+                    </p>
+                    <h1 class="line2">
+                        <span style="--i:0">R</span><span style="--i:1">i</span><span style="--i:2">t</span><span style="--i:3">h</span><span style="--i:4">w</span><span style="--i:5">i</span><span style="--i:6">k</span>
+                        <span style="--i:7"> </span><span style="--i:8">R</span><span style="--i:9">e</span><span style="--i:10">d</span><span style="--i:11">d</span><span style="--i:12">y</span>
+                        <span style="--i:13"> </span><span style="--i:14">M</span><span style="--i:15">a</span><span style="--i:16">r</span><span style="--i:17">l</span><span style="--i:18">a</span>
+                    </h1>
+                    <h2 class="line3">
+                        <span style="--i:0">A</span><span style="--i:1">I</span><span style="--i:2">M</span><span style="--i:3">L</span>
+                        <span style="--i:4"> </span><span style="--i:5">s</span><span style="--i:6">t</span><span style="--i:7">u</span><span style="--i:8">d</span><span style="--i:9">e</span><span style="--i:10">n</span><span style="--i:11">t</span>
+                        <span style="--i:12"> </span><span style="--i:13">|</span><span style="--i:14"> </span>
+                        <span style="--i:15">f</span><span style="--i:16">r</span><span style="--i:17">o</span><span style="--i:18">n</span><span style="--i:19">t</span><span style="--i:20">e</span><span style="--i:21">n</span><span style="--i:22">d</span>
+                        <span style="--i:23"> </span><span style="--i:24">d</span><span style="--i:25">e</span><span style="--i:26">v</span><span style="--i:27">e</span><span style="--i:28">l</span><span style="--i:29">o</span><span style="--i:30">p</span><span style="--i:31">e</span><span style="--i:32">r</span>
+                    </h2>
                 </div>
 
                 <div class="download-social">
-                    <a href="my_CV1.pdf" class="btn" download="my_CV1.pdf">Download CV</a>
+                    <a href="my-resume.pdf" class="btn" download="my_resume.pdf">Download CV</a>
                     <div class="social-icons">
                         <a href="https://github.com/RithwikReddyMarla" target="_blank"><i class="ri-github-fill"></i></a>
                         <a href="https://www.linkedin.com/in/rithwik-reddy-marla/" target="_blank"><i class="ri-linkedin-fill"></i></a>
